# CLAH_IA

./: .gitignore  404.html  CNMF_Parameters_current.txt  CNMF_Parameters_prev_preAugust2024.txt  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-docs.yml
1_installation/: index.html
2_order-of-operations/: index.html
3_structure-folder-path-names/: index.html
AppDesktopSettings/: mocogui.desktop
CLAH_ImageAnalysis/: __init__.py
CLAH_ImageAnalysis/GUI/: BasicGUIStruc.py  Cropper_WA.py  Cropper_fastapi.py  Cropper_streamlit_old.py  GUI_Utils.py  M2SD_GUI.py  M2SD_GUI_CTK.py  M2SD_WA.py  __init__.py  microCellCheckGUI.py  microCellCheckGUI_test.py  multiSessASpatCheck.py  segDictGUI.py  segDictWA.py  segDictWATest.py
CLAH_ImageAnalysis/ISX_converter/: ISX_converter.py  __init__.py
CLAH_ImageAnalysis/ISXanalysis/: ISX_analyzer.py  ISX_converter.py  ISX_enum.py  ISX_folderUtils.py  __init__.py
CLAH_ImageAnalysis/PlaceFieldLappedAnalysis/: PCLA_dependencies.py  PCLA_enum.py  PCLA_utils.py  PlaceCellsLappedAnalysis.py  __init__.py
CLAH_ImageAnalysis/behav2p/: TDML2tBD_enum.py  TDML2tBD_utils.py  TDML2treadBehDict.py  XML2frTimes2P.py  __init__.py  b2p_utils.py  tBD_lD_manager.py
CLAH_ImageAnalysis/behavior/: GPIOfrTimes.py  TDML2tBD_enum.py  TDML2tBD_utils.py  TDML2treadBehDict.py  XML2frTimes2P.py  __init__.py  behavior_utils.py  tBD_lD_manager.py
CLAH_ImageAnalysis/config/: colors.json  text.json
CLAH_ImageAnalysis/core/: Class_Templates.py  __init__.py
CLAH_ImageAnalysis/decoder/: ComponentEvaluator.py  GeneralDecoder.py  TwoOdorDecoder.py  TwoOdorDecoder_dev.py  __init__.py  decoder_enum.py
CLAH_ImageAnalysis/dependencies/: CUDA_utils.py  __init__.py  filter_utils.py  find_maxIndNsortmaxInd.py  geometric_tools.py  local_minima.py  normalization_utils.py  runmean.py  similarity_tools.py
CLAH_ImageAnalysis/registration/: CR_CI_collater.py  CRwROI_enum.py  CRwROI_manager.py  CRwROI_plots.py  CRwROI_utils.py  __init__.py  cellRegistrar_wROICaT.py
CLAH_ImageAnalysis/tifStackFunc/: CNMF_Utils.py  H5_Utils.py  ISX_Utils.py  ImageStack_Utils.py  M2SD_manager.py  MoCo2segDict.py  MoCoPreprocessing.py  MotionCorrectFPS10.py  MovieCropper.py  Movie_Utils.py  OME2H5_converter.py  TSF_enum.py  __init__.py
CLAH_ImageAnalysis/unitAnalysis/: CCF_Dep.py  CCF_Plotter.py  CCF_StatTesting.py  CCF_Utils.py  CueCellFinder.py  PCR_CCF_Plotter.py  PostCR_CueCellFinder.py  QT_Plotters.py  QT_debugger.py  QT_manager.py  RidgeWalker.py  UA_enum.py  __init__.py  lapCueDict_utils.py  pks_utils.py  quickTuning.py  sepCueShift_utils.py  wrapCueShiftTuning.py  wrapMultSessStruc.py
CLAH_ImageAnalysis/utils/: ServiceSetup.py  Streamlit_utils.py  __init__.py  caiman_utils.py  db_utils.py  debug_utils.py  enum_utils.py  fig_tools.py  folder_tools.py  image_paths.py  image_utils.py  isx_utils.py  iter_utils.py  mdata_extractor.py  parser_utils.py  paths.py  saveNloadUtils.py  selector.py  sparse_matrix_utils.py  text_formatting.py  time_utils.py  wrappers4output.py
CLIs/CLI_index/: index.html
CLIs/cellRegistration/: index.html
CLIs/tifStackFunc/: index.html
CLIs/unitAnalysis/: index.html
GUIs/CROPPER/: index.html
GUIs/GUI_index/: index.html
GUIs/MOCOGUI/: index.html
GUIs/SDGUI/: index.html
SystemdServices/: app_settings.json  runM2SD_WA.sh  runSD_WA.sh  setup.sh
SystemdServices/templates/: service_template.txt  sh_template.txt
dbs/: paths2scan.txt  things2avoid.txt
docs/: 0_index.md  1_installation.md  2_order-of-operations.md  3_structure-folder-path-names.md  index.md  installation.md  mkdocs.yml  test.md  trigger.txt
docs/CLIs/: CLI_index.md  cellRegistration.md  tifStackFunc.md  unitAnalysis.md
docs/GUIs/: CROPPER.md  GUI_index.md  MOCOGUI.md  SDGUI.md
frontend4WA/Cropper/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.json
search/: search_index.json
(+14 files in other folders)
