[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CLAH_ImageAnalysis"
version = "1.3.0"
description = "Suite of Python programs used for 2-photon calcium imaging analysis"
authors = [{ name = "Alex Hurowitz" }]
readme = "README.md"
keywords = [
  "2-photon",
  "miniscope",
  "1-photon",
  "calcium imaging",
  "analysis",
  "motion correction",
  "segmentation",
  "tracking",
]
requires-python = ">=3.11"

dependencies = [
  "aenum",
  "cairosvg",
  "easygui",
  "fastapi",
  "h5py",
  "inquirer",
  "isx",
  "libsvm",
  "lxml",
  "numpy<2.0",
  "oasis-deconv",
  "opencv-contrib-python",
  "opencv-python",
  "pandas",
  "plotly",
  "prettytable",
  "rasterio",
  "rich",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "seaborn",
  "streamlit",
  "toml",
  "tomli",
  "tqdm",
  "uvicorn",
]

[project.urls]
"Homepage" = "https://github.com/thicclatka/CLAH_IA"
"Documentation" = "https://thicclatka.github.io/CLAH_IA"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
base = [
  "caiman @ git+https://github.com/thicclatka/CaImAn.git",
  "roicat==1.3.6",
  "roiextractors @ git+https://github.com/RichieHakim/roiextractors.git",
]
gpu = [
  "scikit-cuda @ git+https://github.com/lebedov/scikit-cuda.git",
  "sqljobscheduler @ git+https://github.com/thicclatka/SQLJobScheduler.git",
]
all = ["CLAH_ImageAnalysis[base]", "CLAH_ImageAnalysis[gpu]"]
nogpu = ["CLAH_ImageAnalysis[base]"]
